{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 39,
  "lineage": "fbe149f9-2da0-c622-ae20-92c6d2805539",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "amq-jumphost-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-022ce6f32988af5fa",
            "arn": "arn:aws:ec2:ap-south-1:148761650130:instance/i-02e90eebddbcaed13",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02e90eebddbcaed13",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "tf-amq-project-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0440faeec12efc98b",
            "private_dns": "ip-10-0-107-102.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.107.102",
            "public_dns": "ec2-3-110-187-226.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.110.187.226",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-south-1:148761650130:key/36d4b1e0-3e3e-438c-b741-a529ffeb3796",
                "throughput": 125,
                "volume_id": "vol-011440269b23507ac",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-009eeaf909b3f5a4f",
            "tags": {
              "Name": "AMQ-JUMPHOST-INSTANCE"
            },
            "tags_all": {
              "Name": "AMQ-JUMPHOST-INSTANCE"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b0d5389ca35c3ad9"
            ]
          },
          "dependencies": [
            "aws_key_pair.name",
            "aws_security_group.amq-sg",
            "aws_subnet.public-subnet",
            "aws_vpc.my-vpc-1",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "amq-master-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-022ce6f32988af5fa",
            "arn": "arn:aws:ec2:ap-south-1:148761650130:instance/i-0e7fb319f3e700f17",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdh",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-south-1:148761650130:key/36d4b1e0-3e3e-438c-b741-a529ffeb3796",
                "throughput": 0,
                "volume_id": "vol-02ea2d05a86fa5b67",
                "volume_size": 5,
                "volume_type": "io2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e7fb319f3e700f17",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "tf-amq-project-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-057c1eeef352394cf",
            "private_dns": "ip-10-0-108-208.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.108.208",
            "public_dns": "ec2-3-108-56-56.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.108.56.56",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-south-1:148761650130:key/36d4b1e0-3e3e-438c-b741-a529ffeb3796",
                "throughput": 125,
                "volume_id": "vol-0ec00a5a231362158",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08f0547a4df4624ea",
            "tags": {
              "Name": "AMQ-MASTER-INSTANCE"
            },
            "tags_all": {
              "Name": "AMQ-MASTER-INSTANCE"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b0d5389ca35c3ad9"
            ]
          },
          "dependencies": [
            "aws_key_pair.name",
            "aws_security_group.amq-sg",
            "aws_subnet.public-subnet-1",
            "aws_vpc.my-vpc-1",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "amq-slave-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-022ce6f32988af5fa",
            "arn": "arn:aws:ec2:ap-south-1:148761650130:instance/i-0ca24f765b4c4571e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdh",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-south-1:148761650130:key/36d4b1e0-3e3e-438c-b741-a529ffeb3796",
                "throughput": 0,
                "volume_id": "vol-02ea2d05a86fa5b67",
                "volume_size": 5,
                "volume_type": "io2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ca24f765b4c4571e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "tf-amq-project-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00466f66d376a21a3",
            "private_dns": "ip-10-0-109-108.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.109.108",
            "public_dns": "ec2-3-6-92-195.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.6.92.195",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-south-1:148761650130:key/36d4b1e0-3e3e-438c-b741-a529ffeb3796",
                "throughput": 125,
                "volume_id": "vol-09b4f047f43b46e94",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cd1bda2874a75957",
            "tags": {
              "Name": "AMQ-SLAVE-INSTANCE"
            },
            "tags_all": {
              "Name": "AMQ-SLAVE-INSTANCE"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b0d5389ca35c3ad9"
            ]
          },
          "dependencies": [
            "aws_key_pair.name",
            "aws_security_group.amq-sg",
            "aws_subnet.public-subnet-2",
            "aws_vpc.my-vpc-1",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my-igw-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:148761650130:internet-gateway/igw-05dd37231f4afeeb7",
            "id": "igw-05dd37231f4afeeb7",
            "owner_id": "148761650130",
            "tags": {
              "Name": "tf-amq-project-igw"
            },
            "tags_all": {
              "Name": "tf-amq-project-igw"
            },
            "vpc_id": "vpc-065d644fbcf2199fc"
          },
          "dependencies": [
            "aws_vpc.my-vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my-rt-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:148761650130:route-table/rtb-06d2b5fcfab496f32",
            "id": "rtb-06d2b5fcfab496f32",
            "owner_id": "148761650130",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05dd37231f4afeeb7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-amq-project-rt-1"
            },
            "tags_all": {
              "Name": "tf-amq-project-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-065d644fbcf2199fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my-igw-1",
            "aws_vpc.my-vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-sub-rt-ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a97039cc760ae90a",
            "route_table_id": "rtb-06d2b5fcfab496f32",
            "subnet_id": "subnet-009eeaf909b3f5a4f"
          },
          "dependencies": [
            "aws_internet_gateway.my-igw-1",
            "aws_route_table.my-rt-1",
            "aws_subnet.public-subnet",
            "aws_vpc.my-vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-sub-rt-ass-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0238b81f20b143cf3",
            "route_table_id": "rtb-06d2b5fcfab496f32",
            "subnet_id": "subnet-08f0547a4df4624ea"
          },
          "dependencies": [
            "aws_internet_gateway.my-igw-1",
            "aws_route_table.my-rt-1",
            "aws_subnet.public-subnet-1",
            "aws_vpc.my-vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-sub-rt-ass-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ffa997187ffbd967",
            "route_table_id": "rtb-06d2b5fcfab496f32",
            "subnet_id": "subnet-0cd1bda2874a75957"
          },
          "dependencies": [
            "aws_internet_gateway.my-igw-1",
            "aws_route_table.my-rt-1",
            "aws_subnet.public-subnet-2",
            "aws_vpc.my-vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "amq-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:148761650130:security-group/sg-0b0d5389ca35c3ad9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b0d5389ca35c3ad9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 61616,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 61616
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 61617,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 61617
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8161,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8161
              }
            ],
            "name": "terraform-20241031175558694200000003",
            "name_prefix": "terraform-",
            "owner_id": "148761650130",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-amq-project-sg"
            },
            "tags_all": {
              "Name": "tf-amq-project-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-065d644fbcf2199fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my-vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:148761650130:security-group/sg-09530fbbb7ebd957e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09530fbbb7ebd957e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.108.0/24",
                  "10.0.109.0/24"
                ],
                "description": null,
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [
                  "10.0.109.0/24"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "terraform-20241101115838982800000001",
            "name_prefix": "terraform-",
            "owner_id": "148761650130",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-efs-sg"
            },
            "tags_all": {
              "Name": "tf-efs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-065d644fbcf2199fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my-vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:148761650130:subnet/subnet-0a5eed9968a685280",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.105.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a5eed9968a685280",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "148761650130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-amq-project-private-subnet"
            },
            "tags_all": {
              "Name": "tf-amq-project-private-subnet"
            },
            "vpc_id": "vpc-065d644fbcf2199fc"
          },
          "dependencies": [
            "aws_vpc.my-vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:148761650130:subnet/subnet-0cf3132bbea02143f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.106.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf3132bbea02143f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "148761650130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-amq-project-private-subnet"
            },
            "tags_all": {
              "Name": "tf-amq-project-private-subnet"
            },
            "vpc_id": "vpc-065d644fbcf2199fc"
          },
          "dependencies": [
            "aws_vpc.my-vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:148761650130:subnet/subnet-009eeaf909b3f5a4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.107.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-009eeaf909b3f5a4f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "148761650130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-amq-project-public-subnet"
            },
            "tags_all": {
              "Name": "tf-amq-project-public-subnet"
            },
            "vpc_id": "vpc-065d644fbcf2199fc"
          },
          "dependencies": [
            "aws_vpc.my-vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:148761650130:subnet/subnet-08f0547a4df4624ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.108.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f0547a4df4624ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "148761650130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-amq-project-public-subnet"
            },
            "tags_all": {
              "Name": "tf-amq-project-public-subnet"
            },
            "vpc_id": "vpc-065d644fbcf2199fc"
          },
          "dependencies": [
            "aws_vpc.my-vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:148761650130:subnet/subnet-0cd1bda2874a75957",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.109.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd1bda2874a75957",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "148761650130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-amq-project-public-subnet"
            },
            "tags_all": {
              "Name": "tf-amq-project-public-subnet"
            },
            "vpc_id": "vpc-065d644fbcf2199fc"
          },
          "dependencies": [
            "aws_vpc.my-vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:148761650130:vpc/vpc-065d644fbcf2199fc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09ab99612b782e586",
            "default_route_table_id": "rtb-0a4a8492cce8c8fba",
            "default_security_group_id": "sg-05d8faa4a50083c76",
            "dhcp_options_id": "dopt-0b87f76a21ea958a3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-065d644fbcf2199fc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a4a8492cce8c8fba",
            "owner_id": "148761650130",
            "tags": {
              "Name": "tf-amq-project-vpc"
            },
            "tags_all": {
              "Name": "tf-amq-project-vpc"
            }
          }
        }
      ]
    }
  ]
}